--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
         </div>
         <!-- 右列：oracle、ASR、意图GT、意图结果 -->
         <div class="column">
-          <div class="text-box"><strong>Oracle:</strong> resume the song from the audiobook by the beatles</div>
-          <div class="text-box"><strong>ASR:</strong> resume the song from the audiobook by the beatles these tomatoes are less expensive</div>
-          <div class="text-box"><strong>Ground Truth:</strong> 意图: play_audiobook, 实体: [player_setting=resume, media_type=audiobook, artist_name=beatles]</div>
-          <div class="text-box"><strong>Prediction:</strong> 意图: play_audiobook, 实体: [player_setting=resume, media_type=audiobook, artist_name=beatles]</div>
+          <div class="text-box"><strong>ASR: </strong>resume the song from the audiobook by the beatles</div>
+          <!-- <div class="text-box"><strong>ASR:</strong> resume the song from the audiobook by the beatles these tomatoes are less expensive</div> -->
+          <div class="text-box"><strong>意图: </strong>播放-有声书播放</div>
+          <!-- <div class="text-box"><strong>Prediction:</strong> 意图: play_audiobook, 实体: [player_setting=resume, media_type=audiobook, artist_name=beatles]</div> -->
         </div>
       </div>
     </div>
@@ -156,19 +156,19 @@
               <source src="./static/audio/src_clean/audio--1490264244.wav" type="audio/wav">
             </audio>
           </div>
-          <div class="audio-block">
+          <!-- <div class="audio-block">
             <span class="audio-label">插入后语音</span>
             <audio controls>
               <source src="./static/audio/wuguan_clean/audio--1490264244_wuguanyuyin01-TTS1490264244_n1.wav" type="audio/wav">
             </audio>
-          </div>
+          </div> -->
         </div>
         <!-- 右列：oracle、ASR、意图GT、意图结果 -->
         <div class="column">
-          <div class="text-box"><strong>Oracle:</strong> remind me tonight to pick up my dry cleaning at eight pm</div>
-          <div class="text-box"><strong>ASR:</strong> remind me tonight to pick up do you need some water clean at eight pm</div>
-          <div class="text-box"><strong>Ground Truth:</strong> 意图: calendar_set, 实体: [event_name=pick up my dry cleaning, time=eight pm]</div>
-          <div class="text-box"><strong>Prediction:</strong> 意图: calendar_set, 实体: [event_name=pick up, timeofday=tonight]</div>
+          <div class="text-box"><strong>ASR:</strong> remind me tonight to pick up my dry cleaning at eight pm</div>
+          <!-- <div class="text-box"><strong>ASR:</strong> remind me tonight to pick up do you need some water clean at eight pm</div> -->
+          <div class="text-box"><strong>意图: </strong>日程-设置日程</div>
+          <!-- <div class="text-box"><strong>Prediction:</strong> 意图: calendar_set, 实体: [event_name=pick up, timeofday=tonight]</div> -->
         </div>
       </div>
     </div>
@@ -183,18 +183,18 @@
               <source src="./static/audio/src_clean/audio--1504190218.wav" type="audio/wav">
             </audio>
           </div>
-          <div class="audio-block">
+          <!-- <div class="audio-block">
             <span class="audio-label">插入后语音</span>
             <audio controls>
               <source src="./static/audio/wuguan_clean/audio--1504190218_wuguanyuyin01-TTS1504190218_n0.wav" type="audio/wav">
             </audio>
-          </div>
+          </div> -->
         </div>
         <div class="column">
-          <div class="text-box"><strong>Oracle:</strong> play a game of contra as a second player</div>
-          <div class="text-box"><strong>ASR:</strong> i will do my homework as soon as possible play a game of contra as a second player</div>
-          <div class="text-box"><strong>Ground Truth:</strong> 意图: play_game, 实体: [game_name=contra]</div>
-          <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: [ ]<span class="red-text">（归到异常类，即拒识）</span></div>
+          <div class="text-box"><strong>ASR:</strong> play a game of contra as a second player</div>
+          <!-- <div class="text-box"><strong>ASR:</strong> i will do my homework as soon as possible play a game of contra as a second player</div> -->
+          <div class="text-box"><strong>意图: </strong>启动-打开游戏</div>
+          <!-- <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: [ ]<span class="red-text">（归到异常类，即拒识）</span></div> -->
         </div>
       </div>
     </div>
@@ -210,7 +210,7 @@
               <source src="./static/audio/src_clean/audio--1501778636.wav" type="audio/wav">
             </audio>
           </div>
-          <div class="audio-block">
+          <!-- <div class="audio-block">
             <span class="audio-label">插入后语音</span>
             <audio controls>
               <source src="./static/audio/wuguan_env/audio--1501778636_wuguanyuyin02-TTS1501778636_n0.wav" type="audio/wav">
@@ -221,14 +221,14 @@
             <audio controls>
               <source src="./static/audio/wuguan_env_enhanced/audio--1501778636_wuguanyuyin02-TTS1501778636_n0_enh.wav" type="audio/wav">
             </audio>
-          </div>
+          </div> -->
         </div>
         <!-- 右列：oracle、ASR、意图GT、意图结果 -->
         <div class="column">
-          <div class="text-box"><strong>Oracle:</strong> whats the currency exchange rate for china</div>
-          <div class="text-box"><strong>ASR:</strong> you should store the fruit in a fridge what is the currency exchange rate for china</div>
-          <div class="text-box"><strong>Ground Truth:</strong> 意图: qa_currency, 实体: [place_name=china]</div>
-          <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: [ ]<span class="red-text">（归到异常类，即拒识）</span></div>
+          <div class="text-box"><strong>ASR:</strong> whats the currency exchange rate for china</div>
+          <!-- <div class="text-box"><strong>ASR:</strong> you should store the fruit in a fridge what is the currency exchange rate for china</div> -->
+          <div class="text-box"><strong>意图: </strong>问答-汇率查询 </div>
+          <!-- <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: [ ]<span class="red-text">（归到异常类，即拒识）</span></div> -->
         </div>
       </div>
     </div>
