--- a/index.html
+++ b/index.html
@@ -122,18 +122,18 @@
       <div class="columns is-vcentered">
         <!-- 左列：源语音、插入后语音 -->
         <div class="column is-one-third">
-          <!-- <div class="audio-block">
+          <div class="audio-block">
             <span class="audio-label">源语音</span>
             <audio controls>
-              <source src="./static/audio/src_clean/audio--1505407237.wav" type="audio/wav">
+              <source src="demo_of_SLU_HUAWEI/static/audio2/audio--1505407237-headset.wav" type="audio/wav">
             </audio>
-          </div> -->
-          <div class="audio-block">
+          </div>
+          <!-- <div class="audio-block">
             <span class="audio-label">插入后语音</span>
             <audio controls>
               <source src="./static/audio/wuguan_clean/audio--1505407237_wuguanyuyin02-TTS1505407237_n7.wav" type="audio/wav">
             </audio>
-          </div>
+          </div> -->
         </div>
         <!-- 右列：oracle、ASR、意图GT、意图结果 -->
         <div class="column">
@@ -153,7 +153,7 @@
           <div class="audio-block">
             <span class="audio-label">源语音</span>
             <audio controls>
-              <source src="./static/audio/src_clean/audio--1490264244.wav" type="audio/wav">
+              <source src="demo_of_SLU_HUAWEI/static/audio2/audio-1490264244.wav" type="audio/wav">
             </audio>
           </div>
           <!-- <div class="audio-block">
@@ -180,7 +180,7 @@
           <div class="audio-block">
             <span class="audio-label">源语音</span>
             <audio controls>
-              <source src="./static/audio/src_clean/audio--1504190218.wav" type="audio/wav">
+              <source src="demo_of_SLU_HUAWEI/static/audio2/audio--1504190218.wav" type="audio/wav">
             </audio>
           </div>
           <!-- <div class="audio-block">
@@ -207,7 +207,7 @@
           <div class="audio-block">
             <span class="audio-label">源语音</span>
             <audio controls>
-              <source src="./static/audio/src_clean/audio--1501778636.wav" type="audio/wav">
+              <source src="demo_of_SLU_HUAWEI/static/audio2/audio-1501778636-headset.wav" type="audio/wav">
             </audio>
           </div>
           <!-- <div class="audio-block">
@@ -229,6 +229,48 @@
           <!-- <div class="text-box"><strong>ASR:</strong> you should store the fruit in a fridge what is the currency exchange rate for china</div> -->
           <div class="text-box"><strong>意图: </strong>问答-汇率查询 </div>
           <!-- <div class="text-box"><strong>Prediction:</strong> 意图: general_quirky, 实体: [ ]<span class="red-text">（归到异常类，即拒识）</span></div> -->
+        </div>
+      </div>
+    </div>
+
+    <!-- 样本5 -->
+    <div class="sample-box scenario2_3">
+      <div class="columns is-vcentered">
+        <!-- 左列：源语音、插入后语音、增强后语音 -->
+        <div class="column is-one-third">
+          <div class="audio-block">
+            <span class="audio-label">源语音</span>
+            <audio controls>
+              <source src="demo_of_SLU_HUAWEI/static/audio2/audio-1490184513.wav" type="audio/wav">
+            </audio>
+          </div>
+
+        </div>
+        <!-- 右列：oracle、ASR、意图GT、意图结果 -->
+        <div class="column">
+          <div class="text-box"><strong>ASR:</strong> are you real</div>
+          <div class="text-box"><strong>意图: </strong>拒识 </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- 样本6 -->
+    <div class="sample-box scenario2_3">
+      <div class="columns is-vcentered">
+        <!-- 左列：源语音、插入后语音、增强后语音 -->
+        <div class="column is-one-third">
+          <div class="audio-block">
+            <span class="audio-label">源语音</span>
+            <audio controls>
+              <source src="demo_of_SLU_HUAWEI/static/audio2/audio-1492780048.wav" type="audio/wav">
+            </audio>
+          </div>
+
+        </div>
+        <!-- 右列：oracle、ASR、意图GT、意图结果 -->
+        <div class="column">
+          <div class="text-box"><strong>ASR:</strong> what do you think about future</div>
+          <div class="text-box"><strong>意图: </strong>拒识 </div>
         </div>
       </div>
     </div>
