--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
           <div class="audio-block">
             <span class="audio-label">源语音</span>
             <audio controls>
-              <source src="demo_of_SLU_HUAWEI/static/audio2/audio--1505407237-headset.wav" type="audio/wav">
+              <source src="./static/audio2/audio--1505407237-headset.wav" type="audio/wav">
             </audio>
           </div>
           <!-- <div class="audio-block">
@@ -153,7 +153,7 @@
           <div class="audio-block">
             <span class="audio-label">源语音</span>
             <audio controls>
-              <source src="demo_of_SLU_HUAWEI/static/audio2/audio-1490264244.wav" type="audio/wav">
+              <source src="./static/audio2/audio-1490264244.wav" type="audio/wav">
             </audio>
           </div>
           <!-- <div class="audio-block">
@@ -180,7 +180,7 @@
           <div class="audio-block">
             <span class="audio-label">源语音</span>
             <audio controls>
-              <source src="demo_of_SLU_HUAWEI/static/audio2/audio--1504190218.wav" type="audio/wav">
+              <source src="./static/audio2/audio--1504190218.wav" type="audio/wav">
             </audio>
           </div>
           <!-- <div class="audio-block">
@@ -207,7 +207,7 @@
           <div class="audio-block">
             <span class="audio-label">源语音</span>
             <audio controls>
-              <source src="demo_of_SLU_HUAWEI/static/audio2/audio-1501778636-headset.wav" type="audio/wav">
+              <source src="./static/audio2/audio-1501778636-headset.wav" type="audio/wav">
             </audio>
           </div>
           <!-- <div class="audio-block">
@@ -241,7 +241,7 @@
           <div class="audio-block">
             <span class="audio-label">源语音</span>
             <audio controls>
-              <source src="demo_of_SLU_HUAWEI/static/audio2/audio-1490184513.wav" type="audio/wav">
+              <source src="./static/audio2/audio-1490184513.wav" type="audio/wav">
             </audio>
           </div>
 
@@ -262,7 +262,7 @@
           <div class="audio-block">
             <span class="audio-label">源语音</span>
             <audio controls>
-              <source src="demo_of_SLU_HUAWEI/static/audio2/audio-1492780048.wav" type="audio/wav">
+              <source src="./static/audio2/audio-1492780048.wav" type="audio/wav">
             </audio>
           </div>
 
