--- a/index.html
+++ b/index.html
@@ -109,6 +109,14 @@
 </head>
 <body>
 
+<section class="section py-5"> <!-- 上下 padding 改小 -->
+  <div class="container">
+    <div class="image">
+      <img src="./static/icon/huawei_demo.png" alt="Example Image" style="max-width: 90%; height: auto;">
+    </div>
+  </div>
+</section>
+
 <!--  <section class="section mt-0">  -->
 <section class="section py-5"> 
   <div class="container">
@@ -248,7 +256,7 @@
         </div>
         <!-- 右列：oracle、ASR、意图GT、意图结果 -->
         <div class="column">
-          <div class="text-box"><strong>ASR:</strong> are you real</div>
+          <div class="text-box"><strong>ASR:</strong> pta are you real</div>
           <div class="text-box"><strong>意图: </strong>拒识 </div>
         </div>
       </div>
