--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </div>
         <!-- 右列：oracle、ASR、意图GT、意图结果 -->
         <div class="column">
-          <div class="text-box"><strong>ASR: </strong>resume the song from the audiobook by the beatles</div>
+          <div class="text-box"><strong>ASR: </strong>continue the song from the audio book by the beatles</div>
           <!-- <div class="text-box"><strong>ASR:</strong> resume the song from the audiobook by the beatles these tomatoes are less expensive</div> -->
           <div class="text-box"><strong>意图: </strong>播放-有声书播放</div>
           <!-- <div class="text-box"><strong>Prediction:</strong> 意图: play_audiobook, 实体: [player_setting=resume, media_type=audiobook, artist_name=beatles]</div> -->
@@ -173,7 +173,7 @@
         </div>
         <!-- 右列：oracle、ASR、意图GT、意图结果 -->
         <div class="column">
-          <div class="text-box"><strong>ASR:</strong> remind me tonight to pick up my dry cleaning at eight pm</div>
+          <div class="text-box"><strong>ASR:</strong> you played them last year you were beaten by the weather you played them last year</div>
           <!-- <div class="text-box"><strong>ASR:</strong> remind me tonight to pick up do you need some water clean at eight pm</div> -->
           <div class="text-box"><strong>意图: </strong>日程-设置日程</div>
           <!-- <div class="text-box"><strong>Prediction:</strong> 意图: calendar_set, 实体: [event_name=pick up, timeofday=tonight]</div> -->
